Add user registration functionality
- Add name field to User model with migration
- Create RegistrationsController with new/create actions
- Add registration form with name, email, password fields
- Add registration routes
- Update User model with name validation
- Add sign up link to sign in page
- Update tests and fixtures for name field
- All tests passing, linter clean, security analysis clean

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,11 @@
 <% password_digest = BCrypt::Password.create("password") %>
 
 one:
+  name: User One
   email_address: one@example.com
   password_digest: <%= password_digest %>
 
 two:
+  name: User Two
   email_address: two@example.com
   password_digest: <%= password_digest %>
