Add no_friends fixture and simplify tests
- Add no_friends user fixture with no friendships
- Update tests to use fixture instead of creating users dynamically
- Remove unnecessary user creation and comments in tests

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -11,3 +11,9 @@ two:
   email_address: two@example.com
   password_digest: <%= password_digest %>
   user_code: USER5678
+
+no_friends:
+  name: No Friends User
+  email_address: no_friends@example.com
+  password_digest: <%= password_digest %>
+  user_code: NOFRIEND
